WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185690
CRASH: Exception thrown from -[AVContentKeySession processContentKeyRequestWithIdentifier:initializationData:options:] after -expire called
https://bugs.webkit.org/show_bug.cgi?id=185690
Summary
CRASH: Exception thrown from -[AVContentKeySession processContentKeyRequestWi...
Jer Noble
Reported
2018-05-16 11:45:47 PDT
CRASH: Exception thrown from -[AVContentKeySession processContentKeyRequestWithIdentifier:initializationData:options:] after -expire called
Attachments
Patch
(1.83 KB, patch)
2018-05-16 11:47 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2018-05-16 11:46:17 PDT
<
rdar://problem/38297768
>
Jer Noble
Comment 2
2018-05-16 11:47:23 PDT
Created
attachment 340509
[details]
Patch
WebKit Commit Bot
Comment 3
2018-05-16 14:23:35 PDT
Comment on
attachment 340509
[details]
Patch Clearing flags on attachment: 340509 Committed
r231872
: <
https://trac.webkit.org/changeset/231872
>
WebKit Commit Bot
Comment 4
2018-05-16 14:23:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug