CRASH: Exception thrown from -[AVContentKeySession processContentKeyRequestWithIdentifier:initializationData:options:] after -expire called https://bugs.webkit.org/show_bug.cgi?id=185690 <rdar://problem/38297768>

Reviewed by Eric Carlson.

Reject all calls to update() after close() has been called on the session.

* platform/graphics/avfoundation/objc/CDMSessionAVContentKeySession.mm:
(WebCore::CDMSessionAVContentKeySession::update):


Canonical link: https://commits.webkit.org/201164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231872 268f45cc-cd09-0410-ab3c-d52691b4dbfc